Dummy commit for testing CI
Remove --if-present option for running build script with yarn

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: |
         yarn
-        yarn run build --if-present
+        yarn run build
     - name: Deploy
       uses: azure/webapps-deploy@v2
       with:
