--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   APP_NAME: auth-app-backend
-  AZURE_WEBAPP_NAME: azwe-backend-d01-auth
+  AZURE_WEBAPP_NAME: azwe-backend-t01-auth
 
 jobs:
   build-and-deploy:
