--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,6 +19,12 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Get runner public IP
+      id: ip
+      uses: haythem/public-ip@v1.2
+    - name: Add runner IP to ACR firewall
+      run: |
+        az acr network-rule add -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }} > /dev/null
     - name: Get key vault secrets
       uses: azure/get-keyvault-secrets@v1
       with:
@@ -45,12 +51,6 @@ jobs:
         TYPEORM_PASSWORD = ${{ steps.kv.outputs.typeorm-password }}
         TYPEORM_PORT = ${{ steps.kv.outputs.typeorm-port }}
         EOF
-    - name: Get runner public IP
-      id: ip
-      uses: haythem/public-ip@v1.2
-    - name: Add runner IP to ACR firewall
-      run: |
-        az acr network-rule add -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }}
     - name: Docker login
       uses: azure/docker-login@v1
       with:
@@ -72,7 +72,7 @@ jobs:
         images: '${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }}'
     - name: Remove runner IP from ACR firewall
       run: |
-        az acr network-rule remove -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }}
+        az acr network-rule remove -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }} > /dev/null
     - name: Az logout
       run: |
         az logout
