--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
     "build": "tsc",
     "database": "mysqld --console",
     "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "ts-node ./src/test-utils/setup.ts && jest --verbose --coverage",
     "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/connect-redis": "^0.0.17",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
+    "@types/faker": "^5.5.8",
+    "@types/jest": "^27.0.2",
+    "@types/mocha": "^9.0.0",
+    "@types/mock-express-request": "^0.2.0",
     "@types/node": "^16.9.1",
-    "@types/redis": "^2.8.32",
+    "@types/sinon": "^10.0.4",
     "concurrently": "^6.2.1",
+    "faker": "^5.5.3",
+    "jest": "^27.2.4",
     "nodemon": "^2.0.12",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/connect-redis": "^0.0.17",
+    "@types/express-session": "^1.17.4",
+    "@types/redis": "^2.8.32",
     "apollo-server-express": "^3.3.0",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
@@ -32,8 +41,10 @@
     "express-session": "^1.17.2",
     "graphql": "^15.5.3",
     "ioredis": "^4.27.9",
+    "mocha": "^9.1.2",
     "mysql": "^2.18.1",
     "redis": "^3.1.2",
+    "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.37"
