--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,14 +6,13 @@ on:
 env:
   APP_NAME: auth-app-backend
   AZURE_WEBAPP_NAME: azwe-backend-d01-auth
-  GITHUB_ENV: development
   ENV_TYPE: dev
 
 jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
-    environment: ${{ secrets.GITHUB_ENV }}
+    environment: development
     steps:
     - name: Git checkout
       uses: actions/checkout@v2
@@ -27,6 +26,12 @@ jobs:
     - name: Add runner IP to ACR firewall
       run: |
         az acr network-rule add -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }} > /dev/null
+    - name: Get key vault secrets
+      uses: azure/get-keyvault-secrets@v1
+      with:
+        keyvault: ${{ secrets.KEY_VAULT_NAME }}
+        secrets: '*'
+      id: kv
     - name: Create .env file
       run: |
         cat << EOF >> .env
@@ -36,7 +41,6 @@ jobs:
         REDIS_KEY = ${{ steps.kv.outputs.redis-key }}
         CORS_ORIGIN = ${{ steps.kv.outputs.cors-origin }}
         SESSION_SECRET = ${{ steps.kv.outputs.session-secret }}
-
         TYPEORM_CONNECTION = mariadb
         TYPEORM_LOGGING = true
         TYPEORM_ENTITIES = dist/entities/**/*.js
