--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
 env:
   APP_NAME: auth-app-backend
   AZURE_WEBAPP_NAME: azwe-backend-p01-auth
-  GITHUB_ENV: production
   ENV_TYPE: prod
   NODE_VERSION: '16.x'
 
@@ -31,8 +30,9 @@ jobs:
 
   build-and-deploy:
     name: Build and Deploy
+    needs: scan
     runs-on: ubuntu-latest
-    environment: ${{ secrets.GITHUB_ENV }}
+    environment: production
     steps:
     - name: Git checkout
       uses: actions/checkout@v2
@@ -46,11 +46,30 @@ jobs:
     - name: Add runner IP to ACR firewall
       run: |
         az acr network-rule add -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }} > /dev/null
+    - name: Get key vault secrets
+      uses: azure/get-keyvault-secrets@v1
+      with:
+        keyvault: ${{ secrets.KEY_VAULT_NAME }}
+        secrets: '*'
+      id: kv
     - name: Create .env file
       run: |
         cat << EOF >> .env
-        NODE_ENV = production
-        VUE_APP_BACKEND_URL = ${{ secrets.BACKEND_URL }}
+        NODE_ENV = development
+        PORT = ${{ steps.kv.outputs.server-port }}
+        REDIS_URL = ${{ steps.kv.outputs.redis-url }}
+        REDIS_KEY = ${{ steps.kv.outputs.redis-key }}
+        CORS_ORIGIN = ${{ steps.kv.outputs.cors-origin }}
+        SESSION_SECRET = ${{ steps.kv.outputs.session-secret }}
+        TYPEORM_CONNECTION = mariadb
+        TYPEORM_LOGGING = true
+        TYPEORM_ENTITIES = dist/entities/**/*.js
+        TYPEORM_MIGRATIONS = dist/migrations/**/*.js
+        TYPEORM_DATABASE = auth
+        TYPEORM_HOST = ${{ steps.kv.outputs.typeorm-host }}
+        TYPEORM_USERNAME = ${{ steps.kv.outputs.typeorm-username }}
+        TYPEORM_PASSWORD = ${{ steps.kv.outputs.typeorm-password }}
+        TYPEORM_PORT = ${{ steps.kv.outputs.typeorm-port }}
         EOF
     - name: Docker login
       uses: azure/docker-login@v1
