--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,16 +43,10 @@ jobs:
     - name: Create .env file
       run: |
         cat << EOF >> .env
-        NODE_ENV = development
-        PORT = ${{ steps.kv.outputs.server-port }}
-        REDIS_URL = ${{ steps.kv.outputs.redis-url }}
-        REDIS_KEY = ${{ steps.kv.outputs.redis-key }}
-        CORS_ORIGIN = ${{ steps.kv.outputs.cors-origin }}
-        SESSION_SECRET = ${{ steps.kv.outputs.session-secret }}
-        TYPEORM_CONNECTION = mariadb
-        TYPEORM_LOGGING = true
-        TYPEORM_ENTITIES = dist/entities/**/*.js
-        TYPEORM_MIGRATIONS = dist/migrations/**/*.js
+        NODE_ENV = testing
+        TYPEORM_LOGGING = false
+        TYPEORM_ENTITIES = src/entities/**/*.ts
+        TYPEORM_MIGRATIONS = src/migrations/**/*.ts
         TYPEORM_DATABASE = auth
         TYPEORM_HOST = ${{ steps.kv.outputs.typeorm-host }}
         TYPEORM_USERNAME = ${{ steps.kv.outputs.typeorm-username }}
@@ -72,7 +66,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: Remove runner IP from ACR firewall
+    - name: Remove access from runner IP
       if: always()
       run: |
         az redis firewall-rules delete -g ${{ env.RESOURCE_GROUP_NAME }} -n ${{ env.REDIS_CACHE_NAME }} --rule-name CI_CD
