--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -40,10 +40,13 @@ jobs:
         keyvault: ${{ secrets.KEY_VAULT_NAME }}
         secrets: '*'
       id: kv
+    - name: Import CA certs
+      run: wget https://www.digicert.com/CACerts/BaltimoreCyberTrustRoot.crt.pem
     - name: Create .env file
       run: |
         cat << EOF >> .env
         NODE_ENV = testing
+        CERT_LOCATION = BaltimoreCyberTrustRoot.crt.pem
         TYPEORM_LOGGING = false
         TYPEORM_ENTITIES = src/entities/**/*.ts
         TYPEORM_MIGRATIONS = src/migrations/**/*.ts
