--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,7 +10,6 @@ env:
   REDIS_CACHE_NAME: azwe-sessionstore-t01-auth
   APP_NAME: auth-app-backend
   AZURE_WEBAPP_NAME: azwe-backend-t01-auth
-  ENV_TYPE: test
   NODE_VERSION: '16.x'
 
 jobs:
@@ -32,8 +31,10 @@ jobs:
       uses: haythem/public-ip@v1.2
     - name: Allow access from runner IP
       run: |
+        az mariadb server update -g ${{ env.RESOURCE_GROUP_NAME }} -s ${{ env.SQL_SERVER_NAME }} --public-network-access Enabled
         az redis firewall-rules create -g ${{ env.RESOURCE_GROUP_NAME }} -n ${{ env.REDIS_CACHE_NAME }} --rule-name CI_CD --start-ip ${{ steps.ip.outputs.ipv4 }} --end-ip ${{ steps.ip.outputs.ipv4 }} > /dev/null
         az mariadb server firewall-rule create -g ${{ env.RESOURCE_GROUP_NAME }} -s ${{ env.SQL_SERVER_NAME }} -n CI_CD --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }} > /dev/null
+        az keyvault network-rule add -n ${{ secrets.KEY_VAULT_NAME }} -g ${{ env.RESOURCE_GROUP_NAME }} --ip-address ${{ steps.ip.outputs.ipv4 }}
     - name: Get key vault secrets
       uses: azure/get-keyvault-secrets@v1
       with:
@@ -46,15 +47,15 @@ jobs:
       run: |
         cat << EOF >> .env
         NODE_ENV = testing
-        CERT_LOCATION = BaltimoreCyberTrustRoot.crt.pem
-        TYPEORM_LOGGING = false
-        TYPEORM_ENTITIES = src/entities/**/*.ts
-        TYPEORM_MIGRATIONS = src/migrations/**/*.ts
-        TYPEORM_DATABASE = auth
+        CERT_LOCATION = ${{ steps.kv.outputs.cert-location }}
         TYPEORM_HOST = ${{ steps.kv.outputs.typeorm-host }}
+        TYPEORM_DATABASE = ${{ steps.kv.outputs.typeorm-database }}
         TYPEORM_USERNAME = ${{ steps.kv.outputs.typeorm-username }}
         TYPEORM_PASSWORD = ${{ steps.kv.outputs.typeorm-password }}
         TYPEORM_PORT = ${{ steps.kv.outputs.typeorm-port }}
+        TYPEORM_LOGGING = false
+        TYPEORM_ENTITIES = src/entities/**/*.ts
+        TYPEORM_MIGRATIONS = src/migrations/**/*.ts
         EOF
     - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v1
@@ -74,6 +75,8 @@ jobs:
       run: |
         az redis firewall-rules delete -g ${{ env.RESOURCE_GROUP_NAME }} -n ${{ env.REDIS_CACHE_NAME }} --rule-name CI_CD > /dev/null
         az mariadb server firewall-rule delete -g ${{ env.RESOURCE_GROUP_NAME }} -s ${{ env.SQL_SERVER_NAME }} -n CI_CD -y > /dev/null
+        az mariadb server update -g ${{ env.RESOURCE_GROUP_NAME }} -s ${{ env.SQL_SERVER_NAME }} --public-network-access Disabled > /dev/null
+        az keyvault network-rule remove -n ${{ secrets.KEY_VAULT_NAME }} -g ${{ env.RESOURCE_GROUP_NAME }} --ip-address ${{ steps.ip.outputs.ipv4 }}/32 > /dev/null
 
   build-and-deploy:
     name: Build and Deploy
@@ -93,48 +96,22 @@ jobs:
     - name: Add runner IP to ACR firewall
       run: |
         az acr network-rule add -n ${{ secrets.REGISTRY_SERVER }} -g ${{ secrets.REGISTRY_RESOURCE_GROUP }} --ip-address ${{ steps.ip.outputs.ipv4 }} > /dev/null
-    - name: Get key vault secrets
-      uses: azure/get-keyvault-secrets@v1
-      with:
-        keyvault: ${{ secrets.KEY_VAULT_NAME }}
-        secrets: '*'
-      id: kv
-    - name: Import CA certs
-      run: wget https://www.digicert.com/CACerts/BaltimoreCyberTrustRoot.crt.pem
-    - name: Create .env file
-      run: |
-        cat << EOF >> .env
-        NODE_ENV = testing
-        CERT_LOCATION = BaltimoreCyberTrustRoot.crt.pem
-        PORT = ${{ steps.kv.outputs.server-port }}
-        REDIS_URL = ${{ steps.kv.outputs.redis-url }}
-        REDIS_KEY = ${{ steps.kv.outputs.redis-key }}
-        CORS_ORIGIN = ${{ steps.kv.outputs.cors-origin }}
-        SESSION_SECRET = ${{ steps.kv.outputs.session-secret }}
-        TYPEORM_CONNECTION = mariadb
-        TYPEORM_LOGGING = true
-        TYPEORM_ENTITIES = dist/entities/**/*.js
-        TYPEORM_MIGRATIONS = dist/migrations/**/*.js
-        TYPEORM_DATABASE = auth
-        TYPEORM_HOST = ${{ steps.kv.outputs.typeorm-host }}
-        TYPEORM_USERNAME = ${{ steps.kv.outputs.typeorm-username }}
-        TYPEORM_PASSWORD = ${{ steps.kv.outputs.typeorm-password }}
-        TYPEORM_PORT = ${{ steps.kv.outputs.typeorm-port }}
-        EOF
     - name: Docker login
       uses: azure/docker-login@v1
       with:
         login-server: ${{ secrets.REGISTRY_SERVER }}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
+    - name: Import CA certs
+      run: wget https://www.digicert.com/CACerts/BaltimoreCyberTrustRoot.crt.pem
     - name: Docker build
       run: |
         docker build -t ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }} .
-        docker tag ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }} ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ env.ENV_TYPE }}-latest
+        docker tag ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }} ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:lts
     - name: Docker push
       run: |
         docker push ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }}
-        docker push ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:${{ env.ENV_TYPE }}-latest
+        docker push ${{ secrets.REGISTRY_SERVER }}/${{ env.APP_NAME }}:lts
     - name: Deploy
       uses: azure/webapps-deploy@v2
       with:
