--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express-session": "^1.17.4",
     "@types/redis": "^2.8.32",
     "apollo-server-express": "^3.3.0",
+    "applicationinsights": "^2.1.8",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
