--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -28,7 +28,7 @@ jobs:
       run: wget https://www.digicert.com/CACerts/BaltimoreCyberTrustRoot.crt.pem
     - name: Docker build
       run: docker build -t auth-app-backend:snyk .
-    - name: Run Snyk
+    - name: Run Snyk scan
       continue-on-error: true
       uses: snyk/actions/docker@master
       env:
@@ -36,7 +36,7 @@ jobs:
       with:
         image: auth-app-backend:snyk
         args: --file=Dockerfile
-    - name: Upload results to GitHub
+    - name: Upload Snyk results to GitHub
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: snyk.sarif
