--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -24,3 +24,19 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: Import CA certs
+      run: wget https://www.digicert.com/CACerts/BaltimoreCyberTrustRoot.crt.pem
+    - name: Docker build
+      run: docker build -t auth-app-backend:snyk .
+    - name: Run Snyk scan
+      continue-on-error: true
+      uses: snyk/actions/docker@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        image: auth-app-backend:snyk
+        args: --file=Dockerfile
+    - name: Upload Snyk results to GitHub
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: snyk.sarif
